# acos

./: .gitignore  ACOS_ACTIVATION_REPORT.md  ACOS_ARCHITECTURAL_REALITY_REPORT.md  ACOS_WHITEPAPER_VS_REALITY_AUDIT.md  AFM_1M_MULTI_SEED_REPORT.md  AFM_BETA_SWEEP_REPORT.md  AFM_DATASET_GENERALIZATION_REPORT.md  AFM_FINAL_POSTMORTEM.md  AFM_FORENSIC_REPORT.md  AFM_FORGETTING_STATISTICS_REPORT.md  AFM_GEOMETRY_REPORT.md  AFM_GIT_STATUS_REPORT.md  AFM_INTEGRATION_AUDIT.md  AFM_PHASE45_MASTER_REPORT.md  AFM_POSTMORTEM.md  AFM_REPRODUCIBILITY_PROTOCOL.md  AFM_RESTORATION_REPORT.md  AFM_V01_REPRODUCTION_REPORT.md  AFM_VALIDATION_REPORT_V02_REAL.md  BACKUP_STRUCTURE.md  GITHUB_PUSH_REPORT.md  INFRASTRUCTURE_HEALTH_REPORT.md  PYTHON_ENVIRONMENT_REPORT.md  REPOSITORY_AUDIT.md  REPRODUCIBILITY_STATUS.md  SCIENTIFIC_VALIDATION_AUDIT.md  eslint.config.mjs  package-lock.json  package.json  server-daemon.js  start-dev.sh  worklog.md
acos-runtime/: README.md  activate_tables.py  pyproject.toml  read_db.py  run_100_queries.py  run_100_queries_v2.py  run_activation.py  run_validation.py  scientific_validation.py  seed_cognitive_data.py
acos-runtime/acos/: __init__.py  cli.py  kernel.py  scheduler.py  trace_logger.py
acos-runtime/acos/agents/: __init__.py  base.py  memory.py  planning.py  research.py  verification.py
acos-runtime/tests/: test_agents.py  test_cognitive.py  test_dynamics.py  test_integration.py  test_kernel.py  test_memory.py  test_predictive.py  test_reflection.py  test_scheduler.py  test_unified.py  test_v2_integration.py  test_validation.py  test_verification.py
(+223 files in other folders)
