[project]
name = "acos-runtime"
version = "0.1.0"
description = "Avadhan Cognitive Operating System Runtime v0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.21.0",
    "numpy>=1.26.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4.0"]
qdrant = ["qdrant-client>=1.12.0"]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "httpx>=0.28.0"]

[project.scripts]
acos = "acos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
